[package]
name = "todo_dp"
version = "0.0.1"
authors = ["Dusan Mijatovic <d.mijatovic@dv4all.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json serialization
serde = "1"
# postgres related
deadpool-postgres = "0.5"
tokio-postgres = { version = "0.5", features = ["with-uuid-0_8"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
# logging
log="0"
env_logger = "0"
